# scrub

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
hooks/: install.sh  pre-commit
scrub/: README.md  __init__.py  cli.py  conftest.py  context_enhancer.py  main.py  pseudonymizer.py  pytest.ini  requirements.txt  scrubber.py  security_recognisers.py  security_recognizers.py
scrub/tests/: test_cli.py  test_cli_check.py  test_context_enhancer.py  test_hook_integration.py  test_pseudonymizer.py  test_recogniser_precedence.py  test_recognisers.py  test_recognisers_pytest.py  test_recognizer_precedence.py  test_recognizers.py  test_recognizers_pytest.py  test_scrubber.py
ui/: .gitignore  README.md  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: Chip.tsx  CodeLines.tsx  DetectionList.tsx  FileTabs.tsx  InputPane.tsx  OriginalPane.tsx  RecogniserPanel.tsx  RecognizerPanel.tsx  RestorePanel.tsx  ReviewPane.tsx  ScrubMinimap.tsx
ui/lib/: api.ts  entities.ts  recompute.ts  sample.ts  types.ts
